--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@ body {
 .spanish {
   display: block; }
 
+.english_footer {
+  display: none; }
+
+.spanish_footer {
+  display: grid; }
+
 .header {
   background: #DCD0C2;
   font-size: 18px;
