--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -167,6 +167,7 @@
                     .boton{
                         display: block;
                         height: 70px;
+                        cursor: pointer;
                     }
 
                     .menu_visible{
